force-app/main/default/objects/Event__c/fields/Premises__c.field-meta.xml
<CustomField>
    <fullName>Premises__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>