force-app/main/default/objects/Event__c/validationRules/Start_less_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_less_End</fullName>
    <active>true</active>
    <errorConditionFormula>EndDateTime__c &lt; StartDateTime__c || EndDateTime__c  =  StartDateTime__c</errorConditionFormula>
    <errorMessage>The end event cannot be earlier or the same time then start</errorMessage>
</ValidationRule>